@@ -1461,8 +1461,9 @@ JSValue *WindowFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const Li
   }
   case Window::Open:
   {
+      String urlString = valueToStringWithUndefinedOrNullCheck(exec, args[0]);
       AtomicString frameName = args[1]->isUndefinedOrNull() ? "_blank" : AtomicString(args[1]->toString(exec));
-        
+
       // Because FrameTree::find() returns true for empty strings, we must check for empty framenames.
       // Otherwise, illegitimate window.open() calls with no name will pass right through the popup blocker.
       if (!allowPopUp(exec, window) && (frameName.isEmpty() || !frame->tree()->find(frameName)))
@@ -1480,8 +1481,8 @@ JSValue *WindowFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const Li
       if (frameName == "_top" || frameName == "_parent") {
           String completedURL;
           Frame* activeFrame = Window::retrieveActive(exec)->m_frame;
-          if (!str.isEmpty() && activeFrame)
-              completedURL = activeFrame->document()->completeURL(str);
+          if (!urlString.isEmpty() && activeFrame)
+              completedURL = activeFrame->document()->completeURL(urlString);
 
           const Window* window = Window::retrieveWindow(frame);
           if (!completedURL.isEmpty() && (!completedURL.startsWith("javascript:", false) || (window && window->isSafeScript(exec)))) {
@@ -1493,12 +1494,12 @@ JSValue *WindowFunc::callAsFunction(ExecState *exec, JSObject *thisObj, const Li
       
       // In the case of a named frame or a new window, we'll use the createWindow() helper
       WindowFeatures windowFeatures;
-      String features = args[2]->isUndefinedOrNull() ? UString() : args[2]->toString(exec);
+      String features = valueToStringWithUndefinedOrNullCheck(exec, args[2]);
       parseWindowFeatures(features, windowFeatures);
       constrainToVisible(screenRect(page->mainFrame()->view()), windowFeatures);
-      
-      frame = createWindow(exec, frame, str, frameName, windowFeatures, 0, false);
-         
+
+      frame = createWindow(exec, frame, urlString, frameName, windowFeatures, 0, false);
+
       if (!frame)
           return jsUndefined();
 
