@@ -1,0 +1,11 @@
+<body>
+    <p>
+        Tests that <code>window.open()</code> does not interpret the missing URL
+        argument as the literal string &ldquo;undefined&rdquo;.
+    </p>
+    <p>
+        Click the Test button. A new window should open. To pass the test, the address
+        bar of the new window should be empty. If it contains a URL (ending with &ldquo;undefined&rdquo;), WebKit failed the test.
+    </p>
+    <button onclick="window.open()">Test</button>
+</body>
